--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,56 @@
 venv/
 .venv/
 env/
+ENV/
 
 # Python cache files
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
+*.so
 
-# Jupyter Notebook checkpoints
+# Jupyter Notebook
 .ipynb_checkpoints/
+*/.ipynb_checkpoints/*
 
-# Miscellaneous
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Thumbs.db
+Desktop.ini
+
+# Logs
 *.log
-*.DS_Store
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Data files (optional - only if data is large or sensitive)
+# *.csv
+# *.xlsx
